--- a/Languages/Japanese/Keyed/SaveStorageSettings.xml
+++ b/Languages/Japanese/Keyed/SaveStorageSettings.xml
@@ -4,7 +4,15 @@
   <SaveStorageSettings.SaveZoneSettingsDesc>この貯蔵エリアの設定を保存します。</SaveStorageSettings.SaveZoneSettingsDesc>
   <SaveStorageSettings.LoadZoneSettings>設定を読込</SaveStorageSettings.LoadZoneSettings>
   <SaveStorageSettings.LoadZoneSettingsDesc>以前セーブした貯蔵エリアの設定を読み込みます。</SaveStorageSettings.LoadZoneSettingsDesc>
-  <SaveStorageSettings.LoadAsNew>新規に読み込む</SaveStorageSettings.LoadAsNew>
+
+  <SaveStorageSettings.SaveBills>加工を保存</SaveStorageSettings.SaveBills>
+  <SaveStorageSettings.SaveBillsDesc>この作業台の加工命令を保存します。</SaveStorageSettings.SaveBillsDesc>
+  <SaveStorageSettings.LoadBills>加工を読込</SaveStorageSettings.LoadBills>
+  <SaveStorageSettings.LoadBillsDesc>以前に保存した作業台の加工命令を読み込みます。</SaveStorageSettings.LoadBillsDesc>
+  <SaveStorageSettings.AppendBills>加工を追加</SaveStorageSettings.AppendBills>
+  <SaveStorageSettings.AppendBillsDesc>以前に保存された加工命令を、この作業台ですでに設定されている加工命令に追加します。</SaveStorageSettings.AppendBillsDesc>
+
+  <SaveStorageSettings.LoadAsNew>新規に読込</SaveStorageSettings.LoadAsNew>
   <SaveStorageSettings.LoadOutfit>服装を読込</SaveStorageSettings.LoadOutfit>
   <SaveStorageSettings.SaveOutfit>服装を保存</SaveStorageSettings.SaveOutfit>
 
